[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "DynaMapp"
version = "0.1.0"
description = "Robotic Dynamic Modeling and Identification Library"
authors = ["Wissem Chiha <chihawissem08@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
